@startuml DiagrammeClasses

package "Domaine Utilisateur" {
  class Utilisateur {
  - id: int
  - nom: string
  - email: string
  }
}

package "Domaine Produit" {
  class Produit {
    - id: int
    - nom: string
    - categorie: string
    - prix: float
    - quantite: int
  }
}
package "Domaine Magasin" {
  class Magasin {
    - id: int
    - nom: string
    - adresse: string
  }

  class StockMagasin {
    - id: int
    - id_magasin: int
    - id_produit: int
    - quantite: int
  }
}

package "Domaine Vente" {
  class Vente {
    - id: int
    - dateVente: Date
    - total: float
    - id_utilisateur: int
    - id_magasin: int
  }

  class LigneVente {
    - idVente: int
    - idProduit: int
    - quantite: int
  }
  class Retour {
    - id: int
    - dateRetour: Date
    - motif: string
    - id_vente: int
  }
}

package "Domaine Logistique" {
  class StockCentral {
    - id: int
    - id_produit: int
    - quantite: int
  }

  class DemandeReapprovisionnement {
    - id: int
    - id_magasin: int
    - id_produit: int
    - quantiteDemandee: int
    - dateDemande: Date
    - statut: string
  }
}

Vente "1" *-- "*" LigneVente : contient >
LigneVente "*" --> "1" Produit : concerne >
Retour "*" --> "1" Vente : annule >
Magasin "1" *-- "*" StockMagasin : possède >
@enduml